# operator

./: DESIGN.md  README.md  SHOW-HN.md  pyproject.toml
.github/workflows/: test.yml
opr/: card.py  cli.py
opr/engine/: audit.py  cost.py  efficiency.py  model.py  safety.py  transcripts.py
opr/tui/: app.py
tests/: test_engine.py
