[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-operator"
version = "0.1.1"
description = "The operations console for AI coding agents — cost, audit, safety, efficiency for Claude Code, from local transcripts."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Evan Cates" }]
keywords = ["claude-code", "ai-agents", "observability", "cli", "finops"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]

[project.scripts]
operator = "opr.cli:main"

[project.urls]
Homepage = "https://github.com/Ludoonus/operator"

[tool.setuptools.packages.find]
include = ["opr*"]
